# Solarpunk-computing

./: .gitignore  CMakeLists.txt  HOWTO.md  LICENSE  Makefile  README.md  partitions.csv  sdkconfig.defaults
boot/esp32/: boot.S
boot/pico2/: boot.S
bsp/esp32/: esp32.ld
container/: container.cpp  container.h
drivers/: uart.cpp
hal/: gpio.cpp  gpio.h  uart.h
hardware/: bom.csv
hub/: bridge_client.py  connect.sh  mesh_bridge.py  terminal_client.py  terminal_server.py  web_terminal.py
hub/agent-orchestrator/: Cargo.toml
hub/agent-orchestrator/src/: agent.rs  llm.rs  main.rs  mcp.rs  orchestrator.rs  persistence.rs  tools.rs  tui.rs  types.rs  web.rs  web_ui.html
hub/agent-orchestrator/tests/: integration.rs
hub/sp-cli/: Cargo.toml
hub/sp-cli/src/: config.rs  connect.rs  flash.rs  main.rs  mesh.rs  status.rs
hub/sp-hub/: Cargo.toml
hub/sp-hub/src/: config.rs  main.rs
hub/sp-hub/src/mesh/: mod.rs  poller.rs  state.rs
hub/sp-hub/src/terminal/: mod.rs  pty.rs
hub/sp-hub/static/: dashboard.html  terminal.html
kernel/: kernel.cpp  kernel.h  memory.cpp  memory.h  scheduler.cpp  scheduler.h  syscall.h
linker/: pico2.ld
main/: CMakeLists.txt  config.h  main.cpp
main/hal/: gpio.cpp  uart.cpp  uart.h
main/llm/: llm_client.cpp  llm_client.h
main/mesh/: discovery.cpp  discovery.h  mesh.cpp  mesh.h  protocol.h
main/power/: sleep.cpp  sleep.h  solar.cpp  solar.h
main/scripting/: engine.cpp  engine.h
main/security/: crypto.cpp  crypto.h
main/web/: captive.cpp  captive.h  webserver.cpp  webserver.h
main/web/static/: app.js  index.html  style.css
net/: net.cpp  net.h
pi-server/: setup-llm.sh
terminal/: terminal.cpp  terminal.h
test/: test_container.cpp  test_main.cpp  test_memory.cpp  test_web3.cpp
web3/: web3.cpp  web3.h
