[package]
name = "solarpunk-agent"
version = "0.2.0"
edition = "2024"
description = "Solarpunk AI Agent Orchestrator - multi-agent TUI dashboard"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (for LLM APIs, web search, MCP)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async channels for agent communication
flume = "0.11"

# UUID for agent/task IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Web UI
axum = "0.8"
tokio-stream = "0.1"
