[package]
name = "sp"
version = "0.1.0"
edition = "2024"
description = "Solarpunk mesh CLI - terminal, mesh control, node management"

[[bin]]
name = "sp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.28"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
url = "2"

[profile.release]
opt-level = "s"
lto = true
strip = true
