[package]
name = "sp-hub"
version = "0.1.0"
edition = "2024"
description = "Solarpunk hub services - web terminal + mesh bridge"

[dependencies]
tokio = { version = "1", features = ["full", "process", "signal"] }
axum = { version = "0.8", features = ["ws"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
nix = { version = "0.30", features = ["term", "signal", "process", "ioctl", "fs"] }
tower-http = { version = "0.6", features = ["cors"] }
libc = "0.2.183"

[profile.release]
opt-level = "s"
lto = true
strip = true
